# multilayer_perceptron

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  config.txt
config/: config.txt
config/tests/: test_config_001.txt  test_config_002.txt  test_config_003.txt  test_config_004.txt  test_config_005.txt  test_config_006.txt  test_config_007.txt  test_config_008.txt  test_config_009.txt  test_config_010.txt  test_config_011.txt  test_config_012.txt  test_config_013.txt  test_config_014.txt  test_config_015.txt  test_config_016.txt  test_config_017.txt  test_config_018.txt  test_config_019.txt  test_config_020.txt  test_config_021.txt  test_config_022.txt  test_config_023.txt  test_config_024.txt  test_config_025.txt  test_config_026.txt  test_config_027.txt  test_config_028.txt  test_config_029.txt  test_config_030.txt  test_config_031.txt  test_config_032.txt  test_config_033.txt  test_config_034.txt  test_config_035.txt  test_config_036.txt  test_config_037.txt  test_config_038.txt  test_config_039.txt  test_config_040.txt
include/: Layer.hpp  NeuronalLayer.hpp
include/activation/: AActivation.hpp  ActivationReLU.hpp  ActivationSoftmax.hpp
include/activation_loss/: ActivationSoftmaxLossCategoricalCrossentropy.hpp
include/config/: Config.hpp  configUtils.hpp  config_utils.hpp
include/data/: Data.hpp  Dataset.hpp  csv_dataset.hpp
include/loss/: ALoss.hpp  LossCategoricalCrossEntropy.hpp
include/network/: Network.hpp
include/trainer/: Metrics.hpp  Trainer.hpp  metrics.hpp
include/trainer/observer/: ITrainerObserver.hpp  TrainerObserverMetricsWriter.hpp
include/types/: EigenTypes.hpp  Types.hpp  eigen_types.hpp
includes/: Layer.hpp
includes/activation/: AActivation.hpp  ActivationReLU.hpp  ActivationSoftmax.hpp
includes/activation_fonction/: AActivation.hpp  ActivationReLU.hpp  ActivationSoftmax.hpp
includes/loss/: ALoss.hpp  LossCategoricalCrossentropy.hpp
includes/trainer/: Accuracy.hpp  Trainer.hpp
src/: Layer.cpp  NeuronalLayer.cpp  main.cpp
src/activation/: AActivation.cpp  ActivationReLU.cpp  ActivationSoftmax.cpp
src/activation_loss/: ActivationSoftmaxLossCategoricalCrossentropy.cpp
src/config/: Config.cpp  configUtils.cpp  config_utils.cpp
src/data/: Dataset.cpp
src/loss/: ALoss.cpp  LossCategoricalCrossEntropy.cpp
src/network/: Network.cpp
src/trainer/: Metrics.cpp  Trainer.cpp  metrics.cpp
src/trainer/observer/: TrainerObserverMetricsWriter.cpp
srcs/: Layer.cpp  main.cpp
srcs/activation/: AActivation.cpp  ActivationReLU.cpp  ActivationSoftmax.cpp
srcs/activation_fonction/: AActivation.cpp  ActivationReLU.cpp  ActivationSoftmax.cpp
srcs/loss/: ALoss.cpp  LossCategoricalCrossentropy.cpp
tool/: clang_format.sh  clang_tidy.sh  download_eigen.sh
tools/: clang_format.sh
